--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
   <body>
 
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+<header>
+<nav>
+  <a>
+  <img src="img/index-logo.svg" width="368" height="153"
+  alt="Логотип барбершопа Бородинский">
+</a>
+  <ul>
 
+  </ul>
+  <li>
+    <button type="button">Войти</button>
+  </li>
+</nav>
+</header>
+<main>
   </body>
 </html>
